# Azercell_ChatBot

./: .gitignore  README.md  docker.compose.yml
backend/: Dockerfile  app.py  pyproject.toml  requirements.txt
frontend/: Dockerfile  app.py  pyproject.toml
frontend/.streamlit/: config.toml
